--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
   },
   "license": "MIT",
   "author": {
-    "name": "vben",
-    "email": "anncwb@126.com",
-    "url": "https://github.com/anncwb"
+    "name": "尤礼科技",
+    "email": "youlikj1@139.com",
+    "url": "https://github.com/ayou129"
   },
   "type": "module",
   "scripts": {
